[package]
name = "torn_api"
version = "0.1.0"
edition = "2021"
authors = ["@Echo_2G <caldwellysr@gmail.com>", "@Grunk <grunk@grunk.xyz>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = {version = "0.12.12", features = ["blocking"]}
serde_json = "1.0.134"
